
CREATE TABLE IF NOT EXISTS categories  (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS words (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    explanation VARCHAR(1000),
    word VARCHAR(255) NOT NULL,
    category_id BIGINT,
    FOREIGN KEY (category_id) REFERENCES categories(id)
);
