CREATE TABLE IF NOT EXISTS quizzes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title VARCHAR(255) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS quiz_words (
    quiz_id BIGINT NOT NULL,
    word_id BIGINT NOT NULL,
    PRIMARY KEY (quiz_id, word_id),
    FOREIGN KEY (quiz_id) REFERENCES quizzes(id),
    FOREIGN KEY (word_id) REFERENCES words(id)
);
